[gd_scene load_steps=17 format=2]

[ext_resource path="res://menu_game_over.gd" type="Script" id=1]
[ext_resource path="res://back1.png" type="Texture" id=2]
[ext_resource path="res://chao1.png" type="Texture" id=3]
[ext_resource path="res://pause_bg.png" type="Texture" id=4]
[ext_resource path="res://fonts/FutilePro.otf" type="DynamicFontData" id=5]
[ext_resource path="res://restart_game.png" type="Texture" id=6]
[ext_resource path="res://btn_quit.png" type="Texture" id=7]
[ext_resource path="res://pause_menu.png" type="Texture" id=8]
[ext_resource path="res://game_over_header.png" type="Texture" id=9]
[ext_resource path="res://audio/game_over_music.ogg" type="AudioStream" id=10]
[ext_resource path="res://gold_1.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 55
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 55
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 55
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 55
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="menu_game_over" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_menu" type="Sprite" parent="."]
scale = Vector2( 0.677239, 0.70014 )
texture = ExtResource( 2 )
centered = false
region_rect = Rect2( 0, 0, 1024, 628 )

[node name="chao1" type="Sprite" parent="bg_menu"]
position = Vector2( 795.693, 1149.08 )
scale = Vector2( 1.25616, 1.50625 )
texture = ExtResource( 3 )

[node name="bg_options" type="Sprite" parent="bg_menu"]
position = Vector2( 479.975, 163.621 )
scale = Vector2( 0.602733, 0.575832 )
texture = ExtResource( 4 )
centered = false

[node name="bg_quit_game" type="Sprite" parent="."]
position = Vector2( 401.562, 481.644 )
scale = Vector2( 0.827578, 0.323704 )
texture = ExtResource( 7 )
centered = false

[node name="btn_reiniciar" type="Button" parent="."]
margin_left = 375.0
margin_top = 352.0
margin_right = 664.0
margin_bottom = 407.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
action_mode = 0
enabled_focus_mode = 0
text = "    Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_sair" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -112.0
margin_right = 101.0
margin_bottom = -45.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
action_mode = 0
enabled_focus_mode = 0
text = "    Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 307.596, 24.5025 )
scale = Vector2( 0.418, 0.418 )
texture = ExtResource( 9 )
centered = false

[node name="gameover_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="last_score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = -116.0
margin_right = 181.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 3 )
text = "LAST: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_score" type="Label" parent="."]
margin_left = 389.0
margin_top = 256.0
margin_right = 693.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 4 )
text = "BEST: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moeda" type="Sprite" parent="."]
visible = false
position = Vector2( 362.024, 216.472 )
scale = Vector2( 0.856616, 0.856616 )
texture = ExtResource( 11 )
centered = false

[node name="qtd_moedas" type="Label" parent="moeda"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 66.0
margin_top = -24.0
margin_right = 326.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.835294, 0.192157, 1 )
text = "9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart_icon" type="Sprite" parent="."]
position = Vector2( 374.861, 352.109 )
scale = Vector2( 0.272016, 0.272016 )
texture = ExtResource( 6 )
centered = false

[node name="quit_icon" type="Sprite" parent="."]
position = Vector2( 415.861, 492.109 )
scale = Vector2( 0.272016, 0.272016 )
texture = ExtResource( 8 )
centered = false
[connection signal="pressed" from="btn_reiniciar" to="." method="_on_btn_reiniciar_pressed"]
[connection signal="pressed" from="btn_sair" to="." method="_on_btn_sair_pressed"]
